--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <p>Git + GitHub</p>
-    <h2>Hello</h2>
+    <h2>Hello!</h2>
     <p>Lorem  ipsum dolor sit amet consectetur adipisicing elit. Impedit ipsum porro possimus quasi consequatur nemo unde aut laborum, molestian aperiam</p>
 </body>
 </html
